Revert "default lives change"
This reverts commit f2af7bf1aecf2f55d767a4107f4e8e92ec9c46c3.